# garmin-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/garmin_mcp/: auth.py  server.py
tests/: test_tools.py
