[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin_mcp"
version = "0.1.0"
description = "Garmin MCP server for Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sindre Fjellestad" }]
dependencies = [
    "mcp[cli]",
    "garminconnect>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
garmin-mcp = "garmin_mcp.server:main"
garmin-mcp-auth = "garmin_mcp.auth:main"

[project.urls]
Homepage = "https://github.com/Sinfjell/garmin-mcp"
Repository = "https://github.com/Sinfjell/garmin-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"
